Fix overlapping navbar

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -25,7 +25,7 @@ $tangerine: #F28500*/
 #nav-list {
 	list-style: none;
 	display: flex;
-	padding: 20px 60px;
+	padding: 10px 60px;
 	box-sizing: border-box;
 }
 
